force-app/main/default/objects/InvoicesManagement__c/InvoicesManagement__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Propiedades para la gestión de facturas</description>
    <label>Gestión Facturas</label>
</CustomObject>