force-app/main/default/objects/InvoicesManagement__c/fields/endOfTheMonthFromDayExtraFee__c.field-meta.xml
<CustomField>
    <fullName>endOfTheMonthFromDayExtraFee__c</fullName>
    <defaultValue>25</defaultValue>
    <description>Cuando es cuota extra y es final de mes, indica desde que día se puede generar números de factura.</description>
    <inlineHelpText>Cuando es cuota extra y es final de mes, indica desde que día se puede generar números de factura.</inlineHelpText>
    <label>Cuota Extra: Gen. Num Factura desde</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>