force-app/main/default/objects/InvoicesManagement__c/fields/endOfTheMonthFromDayFee__c.field-meta.xml
<CustomField>
    <fullName>endOfTheMonthFromDayFee__c</fullName>
    <defaultValue>25</defaultValue>
    <description>Cuando es una cuota y es final de mes, desde que día está permitido generar número de facturas</description>
    <inlineHelpText>Cuando es una cuota y es final de mes, desde que día está permitido generar número de facturas</inlineHelpText>
    <label>Cuota: Gen. Num Factura desde</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>