force-app/main/default/objects/InvoicesManagement__c/fields/startOfTheMonthToDayExtraFee__c.field-meta.xml
<CustomField>
    <fullName>startOfTheMonthToDayExtraFee__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Cuando es una cuota extra y es principio de mes, indica hasta que día se puede generar número de facturas</description>
    <inlineHelpText>Cuando es una cuota extra y es principio de mes, indica hasta que día se puede generar número de facturas</inlineHelpText>
    <label>Cuota Extra: Gen. Num Factura hasta</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>