force-app/main/default/objects/InvoicesManagement__c/fields/startOfTheMonthToDayFee__c.field-meta.xml
<CustomField>
    <fullName>startOfTheMonthToDayFee__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Cuando es una cuota y es principio de mes, hasta que día que va a permitir la generación del número de factura</description>
    <inlineHelpText>Cuando es una cuota y es principio de mes, hasta que día que va a permitir la generación del número de factura</inlineHelpText>
    <label>Cuota: Gen. Num Factura hasta</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>